--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,8 @@
     <item name="android:textColor">@android:color/black</item>
     <item name="android:editTextStyle">@style/ResetEditText</item>
     <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+    <item name="android:datePickerDialogTheme">@style/Dialog.Theme</item>
+    <item name="android:timePickerDialogTheme">@style/Dialog.Theme</item>
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
   </style>
@@ -14,6 +16,12 @@
   <style name="Theme.App.SplashScreen" parent="AppTheme">
     <item name="android:windowBackground">@drawable/splashscreen</item>
   </style>
+
+  <style name="Dialog.Theme" parent="Theme.AppCompat.Light.Dialog">
+    <item name="colorAccent">#0284C7</item>
+    <item name="android:textColorPrimary">#000000</item>
+  </style>
+
 
   <!-- https://github.com/henninghall/react-native-date-picker/ -->
   <style name="DatePickerTheme" parent="DatePickerBaseTheme">
